Fix to hide navbar in program if too small

--- a/src/containers/programme/programme.css
+++ b/src/containers/programme/programme.css
@@ -59,7 +59,6 @@
 	padding: 0px 10px;
 }
 
-@media screen and (max-height: 450px) {
-	.sidenav {padding-top: 15px;}
-	.sidenav a {font-size: 18px;}
+@media screen and (max-width: 450px) {
+	.sidenav {display: none;}
 }
